// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button /> should render as a primary button 1`] = `
<Button
  className="ui-shared__button css-cifbew "
  disabled={false}
  onClick={null}
  testId="Button"
>
  <div
    className="css-1vbmsgf"
  >
    Press me
  </div>
</Button>
`;

exports[`<Button /> should render as a regular button if type is explicitly defined 1`] = `
<Button
  className="ui-shared__button css-1a50m4j "
  disabled={false}
  onClick={null}
  testId="Button"
>
  <div
    className="css-1vphhlq"
  >
    Press me
  </div>
</Button>
`;

exports[`<Button /> should render as a regular button if type is omitted 1`] = `
<Button
  className="ui-shared__button css-cifbew "
  disabled={false}
  onClick={null}
  testId="Button"
>
  <div
    className="css-1vbmsgf"
  >
    Press me
  </div>
</Button>
`;

exports[`<Button /> should render as a secondary button 1`] = `
<Button
  className="ui-shared__button css-mk0dpu "
  disabled={false}
  onClick={null}
  testId="Button"
>
  <div
    className="css-nhaw1b"
  >
    Press me
  </div>
</Button>
`;
